[gd_scene format=3 uid="uid://dnmqall38dq35"]

[ext_resource type="Script" uid="uid://b60jhkvokjm4h" path="res://scripts/track_select.gd" id="1_asq0n"]

[sub_resource type="LabelSettings" id="LabelSettings_asq0n"]
font_size = 36

[node name="TrackSelect" type="Control" unique_id=609782944]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asq0n")

[node name="Background" type="ColorRect" parent="." unique_id=2041249753]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.41568628, 0.74509805, 0.1882353, 1)

[node name="Label" type="Label" parent="." unique_id=654441310]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 1279.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 64
text = "Выберите трассу"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="." unique_id=1448385551]
layout_mode = 0
offset_left = 775.0
offset_top = 185.0
offset_right = 1115.0
offset_bottom = 341.0
theme_override_font_sizes/font_size = 64
text = "Управление:
WASD или стрелки
"
label_settings = SubResource("LabelSettings_asq0n")
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="." unique_id=2136887521]
layout_mode = 0
offset_left = 98.0
offset_top = 197.0
offset_right = 308.0
offset_bottom = 610.0
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 35

[node name="Button_Track1" type="Button" parent="GridContainer" unique_id=1094061324]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 50
text = "Бахрейн"

[node name="Button_Track2" type="Button" parent="GridContainer" unique_id=759210457]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 50
text = "Китай"

[node name="Button_Track3" type="Button" parent="GridContainer" unique_id=2067756322]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 50
text = "Имола"

[node name="Button_TrackRandom" type="Button" parent="GridContainer" unique_id=32524933]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Рандом"

[node name="Button_Back" type="Button" parent="." unique_id=134180189]
layout_mode = 0
offset_left = 1072.0
offset_top = 607.0
offset_right = 1202.0
offset_bottom = 670.0
theme_override_font_sizes/font_size = 40
text = "Назад"

[connection signal="pressed" from="GridContainer/Button_Track1" to="." method="_on_button_track_1_pressed"]
[connection signal="pressed" from="GridContainer/Button_Track2" to="." method="_on_button_track_2_pressed"]
[connection signal="pressed" from="GridContainer/Button_Track3" to="." method="_on_button_track_3_pressed"]
[connection signal="pressed" from="GridContainer/Button_TrackRandom" to="." method="_on_track_selected"]
[connection signal="pressed" from="GridContainer/Button_TrackRandom" to="." method="_on_button_track_random_pressed"]
[connection signal="pressed" from="Button_Back" to="." method="_on_back_pressed"]
